# commit-suggester-dataset-builder

./: README.md  build_dataset.py  git2bitext.py  make_top_github_repos.sh  massive_clone.sh  parallel_generation.sh  parallel_split.sh  parser.py  pyproject.toml  split_test_train_valid.py  top-java-github.txt  top-python-github.json  top-python-github.txt  top-ruby-github.txt
