[tool.poetry]
name = "commit-suggester-dataset-builder"
version = "0.1.0"
description = "Utility to parse a git repo history log into a dataset"
authors = ["Alberto Massidda <albertomassidda@aol.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.7"
PyDriller = "^1.15.5"
spacy = "^3.0.5"
nltk = "^3.6.1"
pandas = "^1.1.5"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
